# kylix-finance-offchain-apps

./: README.md  gitignore
historical-chain-data-offloader/: Cargo.toml  kylix_metadata.scale
historical-chain-data-offloader/src/: main.rs
offchain-tsdb-api/: api.py  config.ini  requirements.txt  uwsgi.ini
tsdb-data-generation-scripts/: generate_interest.py  generate_kylix_price_mock.py  generate_pool_data.py  generate_total_supply_borrow_mock.py  utilization_data.csv
tsdb-tables/: sql_commands.txt
