[package]
name = "historical-chain-data-offloader"
version = "1.0.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
parity-scale-codec = { version = "3.6.12", features = ["derive", "bit-vec"] }
subxt = "0.38.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
tokio-tungstenite = "0.26.1"
jsonrpsee = { version = "0.24.7", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-tls"] }
serde_json = {version = "1.0.136"}
anyhow = {version = "1"}
http-body-util = {version = "0.1.2"}
http-body = {version = "1"}
tracing = {version = "0.1.41"}
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
tokio-stream = {version = "0.1.17",  features = ["sync"] }
tower-http = {version = "0.6.2",  features = ["cors", "compression-full", "sensitive-headers", "trace", "timeout"] }
tower = {version = "0.5.2",  features = ["timeout"] }
hyper = {version = "1"}
hyper-util = {version = "0.1.10", features = ["client", "client-legacy"]}
console-subscriber = {version = "0.4.1"}
serde = {version="1"}
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal"] }